Fix dark mode for mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* Optionally, you can set only dark if you want */
+  /* color-scheme: dark; */
   color: rgba(255, 255, 255, 0.87);
   background-color: #050414;
 
@@ -19,7 +20,7 @@
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -32,4 +33,4 @@
   button {
     background-color: #f9f9f9;
   }
-}
+} */
